@@ -1,5 +1,8 @@
 2002-03-16  Jeffrey Stedfast  <fejj@ximian.com>
 
+	* gmime-stream-null.c: Updated to subclass the new GMimeStream
+	based on GObject.
+
 	* gmime-stream-mem.c: Updated to be based on the new
 	implementation of GMimeStream.
 
